添加静态资源获取

--- a/application.yaml
+++ b/application.yaml
@@ -18,3 +18,10 @@ datasource:
 redis:
   port: 6379
   DB: 0
+
+resources:
+  video:
+    path: D:\Hz_go\github\douyin_mine\video
+  picture:
+    path: D:\Hz_go\github\douyin_mine\video
+    defaultrelativepath: 0\0\default.jpg
