--- a/application.yaml
+++ b/application.yaml
@@ -23,5 +23,5 @@ resources:
   video:
     path: D:\Hz_go\github\douyin_mine\video
   picture:
-    path: D:\Hz_go\github\douyin_mine\video
+    path: D:\Hz_go\github\douyin_mine\picture
     defaultrelativepath: 0\0\default.jpg
